Fetch available apps from apps container

--- a/src/app/app-container/app-container.component.html
+++ b/src/app/app-container/app-container.component.html
@@ -17,8 +17,8 @@
                 <div fxFlex="100" fxLayout="row">
                     <div fxFlex="75" fxLayout="column" fxLayoutAlign="center start">
                         <mat-card-header>
-                            <mat-card-title> {{installedApp.appName}}</mat-card-title>
-                            <mat-card-subtitle>{{installedApp.appDescription}}</mat-card-subtitle>
+                            <mat-card-title> {{installedApp.name}} - {{installedApp.version}} </mat-card-title>
+                            <mat-card-subtitle>{{installedApp.description}}</mat-card-subtitle>
                         </mat-card-header>
                     </div>
                     <div fxFlex="25" fxLayoutAlign="center end" fxLayout="column">
