Fix streampipes/ce#225: Avoid using function calls in Connect views

--- a/src/app/connect/data-marketplace/adapter-description/adapter-description.component.html
+++ b/src/app/connect/data-marketplace/adapter-description/adapter-description.component.html
@@ -1,12 +1,12 @@
-<div [className]="getClassName()" fxFlex="100"
+<div [className]="className" fxFlex="100"
  fxLayout="column">
     <div fxLayout="column">
         <div class="type" fxLayout="column" fxLayoutAlign="start start">
             <div class="type-data" fxLayout="row" fxLayoutAlign="start start">
-                <mat-icon *ngIf="isDataSetDescription()" class="historic">lens</mat-icon>
-                <mat-icon *ngIf="isDataStreamDescription()" class="real-time">lens</mat-icon>
-                <p *ngIf="isDataSetDescription()">Data Set</p>
-                <p *ngIf="isDataStreamDescription()">Data Stream</p>
+                <mat-icon *ngIf="isDataSetDescription" class="historic">lens</mat-icon>
+                <mat-icon *ngIf="isDataStreamDescription" class="real-time">lens</mat-icon>
+                <p *ngIf="isDataSetDescription">Data Set</p>
+                <p *ngIf="isDataStreamDescription">Data Stream</p>
             </div>
         </div>
         <div fxLayoutAlign="start center" fxLayout="column" class="icon">
@@ -19,13 +19,13 @@
         <div fxFlex="70" class="description" fxLayoutAlign="start start">
             <p [innerHTML]="adapter.description"></p>
         </div>
-        <div fxFlex="30" fxLayout="row" fxLayoutAlign="end end" *ngIf="isRunningAdapter(adapter)" class="delete">
+        <div fxFlex="30" fxLayout="row" fxLayoutAlign="end end" *ngIf="isRunningAdapter" class="delete">
             <button id="{{ 'create-template-' + adapter.label.split(' ').join('_') }}" matTooltip="Create Adapter Template" color="secondary" class="edit" mat-fab (click)="createTemplate(adapter)">
                 <i class="material-icons">
                    file_copy
                 </i>
             </button>
-            <button id="{{ 'delete-' + adapter.label.split(' ').join('_') }}" matTooltip="Delete Adapter" color="primary" mat-fab (click)="deleteAdapter(adapter)" [disabled]="deleteInProgress(adapter.couchDbId)">
+            <button id="{{ 'delete-' + adapterLabel }}" matTooltip="Delete Adapter" color="primary" mat-fab (click)="deleteAdapter(adapter)" [disabled]="deleteInProgress(adapter.couchDbId)">
                 <i class="material-icons" *ngIf="!deleteInProgress(adapter.couchDbId)">
                     delete
                 </i>
@@ -33,12 +33,12 @@
             </button>
         </div>
         <div fxFlex="30" fxLayout="row" fxLayoutAlign="end end" *ngIf="adapter.isTemplate" class="delete">
-            <button id="{{ 'share-template-' + adapter.label.split(' ').join('_') }}" matTooltip="Delete Adapter Template" color="secondary" mat-fab (click)="shareAdapterTemplate(adapter); $event.stopPropagation()">
+            <button id="{{ 'share-template-' + adapterLabel }}" matTooltip="Delete Adapter Template" color="secondary" mat-fab (click)="shareAdapterTemplate(adapter); $event.stopPropagation()">
                 <i class="material-icons" *ngIf="!deleteInProgress(adapter.couchDbId)">
                     share
                 </i>
             </button>
-            <button id="{{ 'delete-template-' + adapter.label.split(' ').join('_') }}" matTooltip="Share Adapter Template" color="primary" mat-fab (click)="deleteAdapterTemplate(adapter); $event.stopPropagation()" [disabled]="deleteInProgress(adapter.couchDbId)">
+            <button id="{{ 'delete-template-' + adapterLabel }}" matTooltip="Share Adapter Template" color="primary" mat-fab (click)="deleteAdapterTemplate(adapter); $event.stopPropagation()" [disabled]="deleteInProgress(adapter.couchDbId)">
                 <i class="material-icons" *ngIf="!deleteInProgress(adapter.couchDbId)">
                     delete
                 </i>
