--- a/src/app/connect/schema-editor/event-property/event-property.component.html
+++ b/src/app/connect/schema-editor/event-property/event-property.component.html
@@ -1,50 +1,63 @@
-<form #propertyForm="ngForm">
-  <div fxLayout="row" fxLayoutAlign="start">
-    <div class="form-group" fxFlexAlign="center">
-      <mat-form-field class="example-full-width" style="margin-right: 10px">
-        <input matInput placeholder="Label" name="label" id="label" [(ngModel)]="property.label">
+<h2 mat-dialog-title>Edit field {{property.runTimeName}}</h2>
+<mat-dialog-content>
+  <form #propertyForm="ngForm">
+    <div fxLayout="row" fxLayoutAlign="start">
+      <div class="form-group" fxFlexAlign="center">
+        <mat-form-field class="example-full-width" style="margin-right: 10px">
+          <input matInput placeholder="Label" name="label" id="label" [(ngModel)]="cachedProperty.label">
+        </mat-form-field>
+      </div>
+      <div attr.id="input-runtime-name-{{cachedProperty.label}}" class="form-group" fxFlexAlign="center">
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="RuntimeName" name="runtimename" id="runtimename"
+            [(ngModel)]="cachedProperty.runTimeName">
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="form-group">
+      <mat-form-field class="doubleWidth">
+        <input matInput placeholder="Domain Property" class="dmainProperty" name="domainproperty" id="domainproperty"
+          [(ngModel)]="cachedProperty.domainProperty">
+      </mat-form-field>
+      <div *ngIf="!isNested">
+        <mat-checkbox name="timestampCheckbox"
+                      (change)="addTimestampDomainProperty()" [checked]="isTimestampProperty">
+          Mark as timestamp
+        </mat-checkbox>
+      </div>
+      <!--<mat-autocomplete #auto="matAutocomplete">-->
+      <!--<mat-option *ngFor="let propertyGuess of domainPropertyGuess.list" [value]="propertyGuess.domainProperty">-->
+      <!--{{ propertyGuess.domainProperty + propertyGuess.probability}}-->
+      <!--</mat-option>-->
+      <!--</mat-autocomplete>-->
+    </div>
+
+
+
+    <div class="form-group">
+      <mat-form-field class="doubleWidth">
+        <!-- <input matInput placeholder="Description"  name="description" id="description" [(ngModel)]="property.description"> -->
+        <textarea matInput name="description" placeholder="Description" id="description"
+          [(ngModel)]="cachedProperty.description" cols="20" rows="2"></textarea>
+
       </mat-form-field>
     </div>
-    <div attr.id="input-runtime-name-{{property.label}}" class="form-group" fxFlexAlign="center">
-      <mat-form-field class="example-full-width">
-        <input matInput placeholder="RuntimeName" name="runtimename" id="runtimename"
-          [(ngModel)]="property.runTimeName">
-      </mat-form-field>
-    </div>
+  </form>
+
+  <div *ngIf="isEventPropertyPrimitive(property)">
+    <app-event-property-primitive [domainPropertyGuess]="domainProbability" [isEditable]="isEditable"
+      [property]="cachedProperty">
+    </app-event-property-primitive>
+  </div>
+  <div *ngIf="isEventPropertyList(property)">
+    <app-event-property-list [isEditable]="isEditable" [property]="cachedProperty">
+    </app-event-property-list>
   </div>
 
-  <div class="form-group">
-    <mat-form-field class="doubleWidth">
-      <input matInput placeholder="Domain Property" class="dmainProperty" name="domainproperty" id="domainproperty"
-        [(ngModel)]="property.domainProperty">
-    </mat-form-field>
-    <!--<mat-autocomplete #auto="matAutocomplete">-->
-    <!--<mat-option *ngFor="let propertyGuess of domainPropertyGuess.list" [value]="propertyGuess.domainProperty">-->
-    <!--{{ propertyGuess.domainProperty + propertyGuess.probability}}-->
-    <!--</mat-option>-->
-    <!--</mat-autocomplete>-->
-  </div>
+</mat-dialog-content>
 
-  <div class="form-group">
-    <mat-form-field class="doubleWidth">
-      <!-- <input matInput placeholder="Description"  name="description" id="description" [(ngModel)]="property.description"> -->
-      <textarea matInput name="description" placeholder="Description" id="description"
-        [(ngModel)]="property.description" cols="20" rows="2"></textarea>
-
-    </mat-form-field>
-  </div>
-</form>
-
-<div *ngIf="isEventPropertyPrimitive(property)">
-  <app-event-property-primitive [domainPropertyGuess]="domainProbability" [isEditable]="isEditable"
-    [property]="property">
-  </app-event-property-primitive>
-</div>
-<div *ngIf="isEventPropertyList(property)">
-  <app-event-property-list [isEditable]="isEditable" [property]="property">
-  </app-event-property-list>
-</div>
-
-
-
-<button mat-button mat-dialog-close>Close</button>
+<mat-dialog-actions>
+  <button mat-button mat-raised-button class="mat-basic" mat-dialog-close>Close</button>
+  <button mat-button mat-raised-button color="primary" (click)="save()">Save</button>
+</mat-dialog-actions>
