--- a/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
+++ b/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
@@ -26,7 +26,7 @@
 
     <div fxLayout="row" fxLayoutAlign="start" *ngIf="!property.isTimestampProperty()">
         <div class="form-group" fxFlexAlign="center" style="width: 155px">
-            <mat-form-field *ngIf="!hadMesarumentUnit" class="example-full-width" style="width: 155px">
+            <mat-form-field *ngIf="!hadMeasarumentUnit" class="example-full-width" style="width: 155px">
                 <input matInput placeholder="Unit" [matAutocomplete]="auto" [formControl]="stateCtrl"
                     [attr.disabled]="transformUnitEnable ? '' : null">
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
@@ -35,7 +35,7 @@
                     </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
-            <mat-form-field *ngIf="hadMesarumentUnit" class="example-full-width" style="width: 155px">
+            <mat-form-field *ngIf="hadMeasarumentUnit" class="example-full-width" style="width: 155px">
                 <input matInput placeholder="Unit" disabled [(ngModel)]="oldMeasurementUnitDipsplay">
             </mat-form-field>
 
@@ -46,7 +46,7 @@
             <mat-icon *ngIf="transformUnitEnable" style="transform: rotate(180deg)">arrow_forward</mat-icon>
         </button>
         <mat-form-field class="example-full-width" style="width: 155px" *ngIf="transformUnitEnable">
-            <mat-select placeholder="New Unit" [(value)]="selectUnit">
+            <mat-select placeholder="New Unit" [(ngModel)]="selectUnit" [formControl]="newUnitStateCtrl"[compareWith]="compareFn">
                 <mat-option *ngFor="let unit of possibleUnitTransformations" [value]="unit"
                     (click)="changeTargetUnit(unit)">
                     {{unit.label}}
