ce#259 replace the line chart

--- a/src/app/core-iu/linechart/lineChart.component.html
+++ b/src/app/core-iu/linechart/lineChart.component.html
@@ -20,7 +20,9 @@
 
 
     <!-- chart header -->
-    <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="displayData != undefined && isLoadingData == false" style="height: 60px">
+    <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="displayData != undefined && isLoadingData == false"
+        style="min-height: 5px" >
+
         <!-- left button + date -->
         <div>
             <div *ngIf="enablePaging">
@@ -71,26 +73,17 @@
     </div>
 
     <!-- Chart -->
-    <div style="height: 400px">
-        <ngx-charts-line-chart
+    <div>
+
+        <plotly-plot
                 flex
                 *ngIf="displayData != undefined && isLoadingData == false"
-                [results]="displayData"
-                [gradient]="false"
-                [xAxis]="true"
-                [yAxis]="true"
-                [legend]="false"
-                [showXAxisLabel]="true"
-                [showYAxisLabel]="true"
-                [xAxisLabel]="_xAxesKey"
-                [yAxisLabel]="_yAxesKeys"
-                [autoScale]="true"
-                [timeline]="true"
-                (select)="onSelect($event)">
-        </ngx-charts-line-chart>
+                [data]="displayData"
+                [layout]="graph.layout">
+        </plotly-plot>
     </div>
 
-
+<!--
     <div fxLayout="column">
         <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="displayData != undefined && isLoadingData == false" style="padding-left: 95px; padding-right: 30px">
             <label>{{displayData[0].series[0].name | date:'MM/dd/yyyy'}} </label>
@@ -101,6 +94,7 @@
             <label>{{displayData[0].series[ displayData[0].series.length - 1].name | date:'HH:mm:ss'}} </label>
         </div>
     </div>
+    -->
 
 
 </div>
