--- a/src/app/core-iu/linechart/lineChart.component.html
+++ b/src/app/core-iu/linechart/lineChart.component.html
@@ -1,10 +1,10 @@
 <div style="width: 100%; height: 500px">
     <!-- error message -->
-    <div *ngIf="(displayData === undefined || _yAxesKeys === undefined) && isLoadingData == false" fxLayout="column" fxLayoutAlign="space-around center" style="margin-top: 30px">
+    <div *ngIf="(dataToDisplay === undefined || _yAxesKeys === undefined) && isLoadingData == false" fxLayout="column" fxLayoutAlign="space-around center" style="margin-top: 30px">
         <mat-icon style="font-size: 70px; height: 70px; width: 70px;">
             clear
         </mat-icon>
-        <h3 *ngIf="displayData === undefined && isLoadingData == false">No Data Found</h3>
+        <h3 *ngIf="dataToDisplay === undefined && isLoadingData == false">No Data Found</h3>
         <h3 *ngIf="_yAxesKeys === undefined && isLoadingData == false">Select Data</h3>
     </div>
 
@@ -20,7 +20,7 @@
 
 
     <!-- chart header -->
-    <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="displayData != undefined && isLoadingData == false"
+    <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="dataToDisplay != undefined && isLoadingData == false"
         style="min-height: 5px" >
 
         <!-- left button + date -->
@@ -77,21 +77,21 @@
 
         <plotly-plot
                 flex
-                *ngIf="displayData != undefined && isLoadingData == false"
-                [data]="displayData"
+                *ngIf="dataToDisplay != undefined && isLoadingData == false"
+                [data]="dataToDisplay"
                 [layout]="graph.layout">
         </plotly-plot>
     </div>
 
 <!--
     <div fxLayout="column">
-        <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="displayData != undefined && isLoadingData == false" style="padding-left: 95px; padding-right: 30px">
-            <label>{{displayData[0].series[0].name | date:'MM/dd/yyyy'}} </label>
-            <label>{{displayData[0].series[ displayData[0].series.length - 1].name | date:'MM/dd/yyyy'}} </label>
+        <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="dataToDisplay != undefined && isLoadingData == false" style="padding-left: 95px; padding-right: 30px">
+            <label>{{dataToDisplay[0].series[0].name | date:'MM/dd/yyyy'}} </label>
+            <label>{{dataToDisplay[0].series[ dataToDisplay[0].series.length - 1].name | date:'MM/dd/yyyy'}} </label>
         </div>
-        <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="displayData != undefined && isLoadingData == false" style="padding-left: 102px; padding-right: 38px">
-            <label>{{displayData[0].series[0].name | date:'HH:mm:ss'}} </label>
-            <label>{{displayData[0].series[ displayData[0].series.length - 1].name | date:'HH:mm:ss'}} </label>
+        <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="dataToDisplay != undefined && isLoadingData == false" style="padding-left: 102px; padding-right: 38px">
+            <label>{{dataToDisplay[0].series[0].name | date:'HH:mm:ss'}} </label>
+            <label>{{dataToDisplay[0].series[ dataToDisplay[0].series.length - 1].name | date:'HH:mm:ss'}} </label>
         </div>
     </div>
     -->
