ce#267 update linechart to use after refactor

--- a/src/app/core-iu/linechart/lineChart.component.html
+++ b/src/app/core-iu/linechart/lineChart.component.html
@@ -76,8 +76,8 @@
     <div>
 
         <plotly-plot
+                *ngIf="dataToDisplay !== undefined"
                 flex
-                *ngIf="dataToDisplay != undefined && isLoadingData == false"
                 [data]="dataToDisplay"
                 [layout]="graph.layout">
         </plotly-plot>
