--- a/src/app/core-iu/linechart/lineChart.component.html
+++ b/src/app/core-iu/linechart/lineChart.component.html
@@ -1,100 +1,32 @@
 <div style="width: 100%; height: 500px">
-    <!-- error message -->
-    <div *ngIf="(dataToDisplay === undefined || _yAxesKeys === undefined) && isLoadingData == false" fxLayout="column" fxLayoutAlign="space-around center" style="margin-top: 30px">
-        <mat-icon style="font-size: 70px; height: 70px; width: 70px;">
-            clear
-        </mat-icon>
-        <h3 *ngIf="dataToDisplay === undefined && isLoadingData == false">No Data Found</h3>
-        <h3 *ngIf="_yAxesKeys === undefined && isLoadingData == false">Select Data</h3>
-    </div>
-
-    <!-- loading -->
-    <div *ngIf="isLoadingData" fxLayout="column" fxLayoutAlign="space-around center" >
-        <div  fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
-            <mat-spinner></mat-spinner>
-        </div>
-        <div  fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
-            <h3>Loading Data</h3>
-        </div>
-    </div>
 
 
-    <!-- chart header -->
-    <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="dataToDisplay != undefined && isLoadingData == false"
-        style="min-height: 5px" >
-
-        <!-- left button + date -->
-        <div>
-            <div *ngIf="enablePaging">
-                <button mat-icon-button (click)="clickFirstPage()">
-                    <mat-icon>first_page</mat-icon>
-                </button>
-                <button mat-icon-button (click)="clickPreviousPage()">
-                    <mat-icon>chevron_left</mat-icon>
-                </button>
-            </div>
+    <div fxLayout="row">
+        <div *ngIf="enablePaging" fxFlex="5">
+            <button mat-icon-button (click)="clickPreviousPage()" class="paging-button">
+                <mat-icon style="font-size: 30px;height: 30px; width: 30px">
+                    chevron_left
+                </mat-icon>
+            </button>
         </div>
 
-        <!-- page -->
-        <div *ngIf="currentPage !== undefined">
-            Page: <label>{{currentPage}} </label>
-            <label *ngIf="maxPage !== undefined"> - {{maxPage}}</label>
-        </div>
 
-        <!-- items per page -->
-        <div *ngIf="enableItemsPerPage" matTooltip="Items per page">
-            <mat-form-field style="width: 70px; margin-top: 10px;" >
-                <mat-label>Items per page</mat-label>
-                <mat-select [(ngModel)]="itemsPerPage" (valueChange)="selectItemsPerPage($event)">
-                    <mat-option [value]=50 style="background-color: #FFFFFF">
-                        50
-                    </mat-option>
-                    <mat-option [value]=100 style="background-color: #FFFFFF">
-                        100
-                    </mat-option>
-                    <mat-option [value]=200 style="background-color: #FFFFFF">
-                        200
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
-
-        <!-- right button -->
-        <div>
-            <div *ngIf="enablePaging">
-                <button  mat-icon-button (click)="clickNextPage()">
-                    <mat-icon>chevron_right</mat-icon>
-                </button>
-                <button mat-icon-button (click)="clickLastPage()">
-                    <mat-icon>last_page</mat-icon>
-                </button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Chart -->
-    <div>
-
-        <plotly-plot
+        <!-- Chart -->
+        <plotly-plot fxFlex
                 *ngIf="dataToDisplay !== undefined"
                 flex
                 [data]="dataToDisplay"
                 [layout]="graph.layout">
         </plotly-plot>
-    </div>
 
-<!--
-    <div fxLayout="column">
-        <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="dataToDisplay != undefined && isLoadingData == false" style="padding-left: 95px; padding-right: 30px">
-            <label>{{dataToDisplay[0].series[0].name | date:'MM/dd/yyyy'}} </label>
-            <label>{{dataToDisplay[0].series[ dataToDisplay[0].series.length - 1].name | date:'MM/dd/yyyy'}} </label>
-        </div>
-        <div fxLayout="row" fxLayoutAlign="space-between center"  *ngIf="dataToDisplay != undefined && isLoadingData == false" style="padding-left: 102px; padding-right: 38px">
-            <label>{{dataToDisplay[0].series[0].name | date:'HH:mm:ss'}} </label>
-            <label>{{dataToDisplay[0].series[ dataToDisplay[0].series.length - 1].name | date:'HH:mm:ss'}} </label>
+        <div *ngIf="enablePaging" fxFlex="5">
+            <button mat-icon-button (click)="clickNextPage()" class="paging-button">
+                <mat-icon style="font-size: 30px;height: 30px; width: 30px">
+                    chevron_right
+                </mat-icon>
+            </button>
         </div>
     </div>
-    -->
 
 
 </div>
