--- a/src/app/core-iu/table/table.component.css
+++ b/src/app/core-iu/table/table.component.css
@@ -2,3 +2,9 @@
     width: 100%;
     background: none;
 }
+
+.paging-button {
+    margin-top: 10px;
+    border: #202020 solid 1px;
+    position: fixed;
+}
