--- a/src/app/core-iu/table/table.component.html
+++ b/src/app/core-iu/table/table.component.html
@@ -38,17 +38,35 @@
     </div>
     -->
 
-    <table mat-table [dataSource]="dataSource" class="table">
+    <div fxLayout="row">
+        <div *ngIf="enablePaging" fxFlex="5">
+            <button mat-icon-button (click)="clickPreviousPage()" class="paging-button">
+                <mat-icon style="font-size: 30px;height: 30px; width: 30px">
+                    chevron_left
+                </mat-icon>
+            </button>
+        </div>
 
-        <ng-container *ngFor="let element of displayedColumns" [cdkColumnDef]="element">
-            <th mat-header-cell *matHeaderCellDef><label style="font-size: large">{{element}}</label></th>
-            <td mat-cell *matCellDef="let row">{{row[element]}}</td>
-        </ng-container>
+        <table mat-table [dataSource]="dataSource" class="table" flex>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <ng-container *ngFor="let element of displayedColumns" [cdkColumnDef]="element">
+                <th mat-header-cell *matHeaderCellDef><label style="font-size: large">{{element}}</label></th>
+                <td mat-cell *matCellDef="let row">{{row[element]}}</td>
+            </ng-container>
 
-    </table>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        </table>
+
+        <div *ngIf="enablePaging" fxFlex="5">
+            <button mat-icon-button (click)="clickNextPage()" class="paging-button">
+                <mat-icon style="font-size: 30px;height: 30px; width: 30px">
+                    chevron_right
+                </mat-icon>
+            </button>
+        </div>
+    </div>
 
 <!--
     <div fxLayout="row" fxLayoutAlign=" center" style="height: 40px;">
