--- a/src/app/data-explorer/explorer/explorer.component.html
+++ b/src/app/data-explorer/explorer/explorer.component.html
@@ -22,10 +22,8 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <button mat-button mat-stroked-button *ngIf="selectedTimeUnit !== 'All'" (click)="selectTimeUnit('All')">All</button>
-                <button mat-button mat-stroked-button *ngIf="selectedTimeUnit === 'All'" color="primary" mat-raised-button>All</button>
-                <button mat-button mat-stroked-button *ngIf="selectedTimeUnit !== '24 Hours'" (click)="selectTimeUnit('24 Hours')">24 Hours</button>
-                <button mat-button mat-stroked-button *ngIf="selectedTimeUnit === '24 Hours'"color="primary" mat-raised-button>24 Hours</button>
+                <button mat-button mat-stroked-button *ngIf="selectedTimeUnit !== '1 Day'" (click)="selectTimeUnit('1 Day')">1 Day</button>
+                <button mat-button mat-stroked-button *ngIf="selectedTimeUnit === '1 Day'"color="primary" mat-raised-button>1 Day</button>
                 <button mat-button mat-stroked-button *ngIf="selectedTimeUnit !== '1 Week'" (click)="selectTimeUnit('1 Week')">1 Week</button>
                 <button mat-button mat-stroked-button *ngIf="selectedTimeUnit === '1 Week'" color="primary" mat-raised-button>1 Week</button>
                 <button mat-button mat-stroked-button *ngIf="selectedTimeUnit !== '1 Month'" (click)="selectTimeUnit('1 Month')">1 Month</button>
@@ -45,13 +43,81 @@
                     <mat-icon style="font-size: 30px;height: 30px; width: 30px">expand_less</mat-icon>
                 </button>
 
-                <button  mat-icon-button matTooltip="Download data" class="icon" (click)="downloadDataAsFile()"
+                <button mat-icon-button matTooltip="Download data" class="icon" (click)="downloadDataAsFile()"
                          style="margin-top: -15px;" color="primary">
                     <mat-icon style="font-size: 30px;height: 30px; width: 30px">
                         get_app
                     </mat-icon>
                 </button>
             </div>
+
+
+            <div class="optionContainer clearfix">
+                <div *ngIf=enableAdvanceOptions>
+                    <div class="option" style="margin-left: 5px">
+                        <div class="optionName">Group values by time</div>
+                        <mat-form-field style="top: -10px; width: 80px; margin-right: 5px">
+                            <input matInput type="number" [(ngModel)]="groupbyValue">
+                        </mat-form-field>
+                        <mat-form-field style="top: -10px; width: 100px">
+                            <mat-select [(value)]="groupbyUnit">
+                                <!--      <mat-option style="background-color: #FFFFFF" value="ns">Nanoseconds</mat-option>
+                                      <mat-option style="background-color: #FFFFFF" value="u">Microseconds</mat-option> -->
+                                <mat-option style="background-color: #FFFFFF" value="ms">Milliseconds</mat-option>
+                                <mat-option style="background-color: #FFFFFF" value="s">Second</mat-option>
+                                <mat-option style="background-color: #FFFFFF" value="m">Minute</mat-option>
+                                <mat-option style="background-color: #FFFFFF" value="h">Hour</mat-option>
+                                <mat-option style="background-color: #FFFFFF" value="d">Day</mat-option>
+                                <mat-option style="background-color: #FFFFFF" value="w">Week</mat-option>
+                                <mat-option style="background-color: #FFFFFF" value="month">Month</mat-option>
+                                <mat-option style="background-color: #FFFFFF" value="year">Year</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div *ngIf="selectedTimeUnit === 'Custom'">
+                    <div class="option" style="margin-left: 5px">
+                        <div class="optionName">Start date</div>
+                        <mat-form-field style="top: -10px">
+                            <input matInput [matDatepicker]="picker" [(ngModel)]="customStartDate">
+                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                            <mat-datepicker #picker></mat-datepicker>
+                        </mat-form-field>
+                    </div>
+                    <div class="option" style="margin-left: 5px">
+                        <div class="optionName">End date</div>
+                        <mat-form-field style="top: -10px">
+                            <input matInput [min]="customStartDate" [matDatepicker]="picker2" [(ngModel)]="customEndDate">
+                            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                            <mat-datepicker #picker2></mat-datepicker>
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <button *ngIf="enableAdvanceOptions || selectedTimeUnit === 'Custom'" mat-icon-button class="icon" style="margin-left: 5px" color="primary">
+                    <mat-icon style="font-size: 30px;height: 30px; width: 30px" (click)="loadData()">autorenew</mat-icon>
+                </button>
+
+
+
+                <!--
+                        <div class="option" style="margin-left: 5px">
+                            <div class="optionName">Aggregation</div>
+                            <mat-form-field style="top: -10px">
+                                <mat-select [(value)]="sad">
+                                    <mat-option style="background-color: #FFFFFF" value="ns">Min</mat-option>
+                                    <mat-option style="background-color: #FFFFFF" value="u">Max</mat-option>
+                                    <mat-option style="background-color: #FFFFFF" value="ms">Mean</mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+                -->
+
+            </div>
+
+
+
         </div>
 
     </div>
@@ -72,17 +138,48 @@
                 </div>
             </div>
 
+            <!-- No Data in Timerange -->
+            <div *ngIf="noDateFoundinTimeRange" fxLayout="column" fxLayoutAlign="space-around center" >
+                <div  fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
+                    <!-- TODO Icon -->
+                </div>
+                <div fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
+                    <h3>Found no data in selected time range ( {{customStartDate | date:'yyyy-MM-dd HH:mm'}} - {{customEndDate | date:'yyyy-MM-dd HH:mm'}} )</h3>
+                </div>
+            </div>
 
-            <mat-tab-group *ngIf="!isLoadingData">
+            <!-- No Data Keys Selected -->
+            <div *ngIf="noKeySelected" fxLayout="column" fxLayoutAlign="space-around center" >
+                <div  fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
+                    <!-- TODO Icon -->
+                </div>
+                <div fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
+                    <h3>Please select data key(s)</h3>
+                </div>
+            </div>
+
+            <!-- No Index Selected -->
+            <div *ngIf="noIndexSelection" fxLayout="column" fxLayoutAlign="space-around center" >
+                <div  fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
+                    <!-- TODO Icon -->
+                </div>
+                <div fxLayout="row" fxLayoutAlign="center center" style="margin-top: 30px">
+                    <h3>Please select Index</h3>
+                </div>
+            </div>
+
+
+            <!-- Charts -->
+            <mat-tab-group *ngIf="!isLoadingData && data !== undefined && yAxesKeys.length > 0">
                 <mat-tab label="Table">
                     <sp-table
                             *ngIf="selectedInfoResult !== undefined"
                             [datas]="data"
                             [xAxesKey]="xAxesKey"
                             [yAxesKeys]="yAxesKeys"
-                            [eventschema]="eventschema"
-                            [startDateData]=""
-                            [endDateData]=""
+                            [eventschema]="selectedInfoResult.eventSchema"
+                            [startDateData]="customStartDate"
+                            [endDateData]="customEndDate"
                             [currentPage]="currentPage"
                             [maxPage]="maxPage"
                             [enablePaging]="true"
@@ -99,9 +196,9 @@
                             [datas]="data"
                             [xAxesKey]="xAxesKey"
                             [yAxesKeys]="yAxesKeys"
-                            [eventschema]="eventschema"
-                            [startDateData]=""
-                            [endDateData]=""
+                            [eventschema]="selectedInfoResult.eventSchema"
+                            [startDateData]="customStartDate"
+                            [endDateData]="customEndDate"
                             [currentPage]="currentPage"
                             [maxPage]="maxPage"
                             [enablePaging]="true"
