--- a/src/app/connect/new-adapter/new-adapter.component.html
+++ b/src/app/connect/new-adapter/new-adapter.component.html
@@ -169,21 +169,21 @@
                             </mat-select>
                         </mat-form-field>
 
-                        <mat-checkbox *ngIf="timestampPropertiesInSchema.length == 0"
-                            [disabled]="timestampPropertiesInSchema.length == 0" [(ngModel)]="saveInDataLake"
-                            [ngModelOptions]="{standalone: true}">Store in Datalake (Timestamp required)</mat-checkbox>
-                        <mat-checkbox *ngIf="timestampPropertiesInSchema.length > 0" [(ngModel)]="saveInDataLake"
-                            [ngModelOptions]="{standalone: true}">Store in Datalake</mat-checkbox>
-                        <mat-form-field *ngIf="saveInDataLake">
-                            <mat-label>Select Time Field</mat-label>
-                            <mat-select [(ngModel)]="dataLakeTimestampField" [ngModelOptions]="{standalone: true}">
-                                <mat-option class="md-elevation-z1" style="background: white;"
-                                    *ngFor="let timestampField of eventSchema.eventProperties | timestampFilter"
-                                    [value]="timestampField.runTimeName">
-                                    {{timestampField.runTimeName}}
-                                </mat-option>
-                            </mat-select>
-                        </mat-form-field>
+                        <!--<mat-checkbox *ngIf="timestampPropertiesInSchema.length == 0"-->
+                            <!--[disabled]="timestampPropertiesInSchema.length == 0" [(ngModel)]="saveInDataLake"-->
+                            <!--[ngModelOptions]="{standalone: true}">Store in Datalake (Timestamp required)</mat-checkbox>-->
+                        <!--<mat-checkbox *ngIf="timestampPropertiesInSchema.length > 0" [(ngModel)]="saveInDataLake"-->
+                            <!--[ngModelOptions]="{standalone: true}">Store in Datalake</mat-checkbox>-->
+                        <!--<mat-form-field *ngIf="saveInDataLake">-->
+                            <!--<mat-label>Select Time Field</mat-label>-->
+                            <!--<mat-select [(ngModel)]="dataLakeTimestampField" [ngModelOptions]="{standalone: true}">-->
+                                <!--<mat-option class="md-elevation-z1" style="background: white;"-->
+                                    <!--*ngFor="let timestampField of eventSchema.eventProperties | timestampFilter"-->
+                                    <!--[value]="timestampField.runTimeName">-->
+                                    <!--{{timestampField.runTimeName}}-->
+                                <!--</mat-option>-->
+                            <!--</mat-select>-->
+                        <!--</mat-form-field>-->
 
                         <mat-checkbox *ngIf="isSetAdapter" [(ngModel)]="adapter.stopPipeline"
                             [ngModelOptions]="{standalone: true}">Stop pipeline when replay is completed</mat-checkbox>
